--- a/AT/TurismoApp/Pages/CalculateDiscount.cshtml
+++ b/AT/TurismoApp/Pages/CalculateDiscount.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
-@model TurismoApp.Pages.CalculateDiscountModel
+@model TurismoApp.Pages.LogOperationsModel
 @{
-    ViewData["Title"] = "Calcular Desconto";
+    ViewData["Title"] = "Operações de Log";
 }
+
+<h2>Operações de Log</h2>
+
+<p>@Model.LogMessage</p>
